<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragment.AuthorsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_new_author"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Adicione_descrição"
            android:inputType="text"
            android:digits="0123456789aABCDEFGHIJLMNOPQRSTUVXZWY bcdefghijlmnopqrstuvxzwy^~"/>





    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_Placa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Placa"
        android:inputType="number"
        android:digits="0123456789"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_localizacao"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:hint="@string/Adicione_Localizacao"
        android:inputType="text"

        android:digits="0123456789aABCDEFGHIJLMNOPQRSTUVXZWY bcdefghijlmnopqrstuvxzwy^~" />



    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="@android:color/white" />

</LinearLayout>